kubernetes/catalog/ntfy/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/Kostecki/unraid-ca-templates/main/templates/ntfy.xml
# Category: Tools-Utilities
# Stars: 103 | Downloads: 15386780
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ntfy
          image: binwiederhier/ntfy
          args:
            - "serve"
          ports:
            - containerPort: 80
              protocol: TCP
              name: host-port-1
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: ntfy-data-0
              mountPath: "/config"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: ntfy-data-0
        persistentVolumeClaim:
          claimName: ntfy-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: host-port-1
  type: ClusterIP
